Added statistics for proposal event. Updated swagger.
